--- a/subs/aiboboxx.yaml
+++ b/subs/aiboboxx.yaml
@@ -1,20 +1,25 @@
 proxies:
   - {"name":"高性价比机场:https://kfyun.uk","type":"ss","server":"127.0.0.1","port":443,"cipher":"aes-128-gcm","password":"6601fb90e9b3"}
-  - {"name":"0|--1","type":"ss","server":"222.112.15.140","port":4410,"cipher":"aes-256-cfb","password":"qwerREWQ@@"}
-  - {"name":"0|--3","type":"ss","server":"27.255.82.23","port":5412,"cipher":"aes-256-cfb","password":"qwerREWQ@@"}
-  - {"name":"0|--4","type":"ss","server":"18.142.51.90","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
-  - {"name":"0|--6","type":"ss","server":"54.179.150.222","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
-  - {"name":"0|--7","type":"ss","server":"210.217.18.69","port":30956,"cipher":"aes-256-cfb","password":"qwerREWQ@@"}
-  - {"name":"0|--9","type":"ss","server":"54.180.9.243","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
-  - {"name":"0|--10","type":"ss","server":"43.203.242.247","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
-  - {"name":"0|--11","type":"ss","server":"222.112.15.141","port":38471,"cipher":"aes-256-cfb","password":"qwerREWQ@@"}
-  - {"name":"0|--12","type":"ss","server":"35.94.25.109","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
-  - {"name":"0|--17","type":"ss","server":"27.255.82.135","port":61891,"cipher":"aes-256-cfb","password":"qwerREWQ@@"}
+  - {"name":"0|--3","type":"ss","server":"27.255.82.135","port":61891,"cipher":"aes-256-cfb","password":"qwerREWQ@@"}
+  - {"name":"0|--5","type":"ss","server":"195.15.254.25","port":54748,"cipher":"chacha20-ietf-poly1305","password":"ghBuJ9pZOF9MohhGyPjo3rvilQhlw9NzBDlOVDonQN0="}
+  - {"name":"0|--6","type":"ss","server":"27.255.82.23","port":5412,"cipher":"aes-256-cfb","password":"qwerREWQ@@"}
+  - {"name":"0|--7","type":"ss","server":"54.180.9.243","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
+  - {"name":"0|--8","type":"ss","server":"54.179.150.222","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
+  - {"name":"0|--10","type":"ss","server":"3.1.204.240","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
+  - {"name":"0|--11","type":"ss","server":"23.154.136.247","port":2376,"cipher":"aes-256-gcm","password":"faBAoD54k87UJG7"}
   - {"name":"0,13|🇸🇬 狮城特殊|@ripaojiedian","type":"ss","server":"13.124.147.239","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
-  - {"name":"0|--19","type":"ss","server":"203.234.238.147","port":41951,"cipher":"aes-256-cfb","password":"qwerREWQ@@"}
-  - {"name":"0|--20","type":"ss","server":"13.113.190.198","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
-  - {"name":"0|--21","type":"ss","server":"18.183.178.120","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
-  - {"name":"0|--22","type":"ss","server":"221.150.109.21","port":7855,"cipher":"aes-256-cfb","password":"qwerREWQ@@"}
+  - {"name":"0|--14","type":"ss","server":"43.203.242.247","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
+  - {"name":"0|--15","type":"ss","server":"35.89.145.123","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
+  - {"name":"0|--16","type":"ss","server":"13.113.190.198","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
+  - {"name":"0|--17","type":"ss","server":"13.250.30.129","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
+  - {"name":"0|--18","type":"ss","server":"125.141.31.100","port":17725,"cipher":"aes-256-cfb","password":"qwerREWQ@@"}
+  - {"name":"0|--19","type":"ss","server":"18.183.178.120","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
+  - {"name":"0|--20","type":"ss","server":"185.189.160.98","port":64759,"cipher":"aes-256-cfb","password":"qwerREWQ@@"}
+  - {"name":"0|--22","type":"ss","server":"54.179.76.173","port":443,"cipher":"aes-256-cfb","password":"amazonskr05"}
+  - {"name":"0|--24","type":"ss","server":"112.213.102.228","port":4231,"cipher":"aes-256-cfb","password":"qwerREWQ@@"}
+  - {"sni":"x2ger-amazon.devefun.net","type":"trojan","password":"Oe5CMj3tiO","server":"3.127.116.35","port":1935,"name":"0|--40"}
+  - {"skip-cert-verify":true,"sni":"us01.trojanyyds.xyz","type":"trojan","password":"243eab52-9ac1-405c-887c-eb112c0985b8","server":"74.226.136.204","port":443,"name":"0|--42"}
+  - {"skip-cert-verify":true,"sni":"us01.trojanyyds.xyz","type":"trojan","password":"243eab52-9ac1-405c-887c-eb112c0985b8","server":"us01.trojanyyds.xyz","port":443,"name":"0|--44"}
   - {"skip-cert-verify":true,"type":"trojan","password":"phXKwfrd","server":"36.150.215.196","port":34188,"name":"13,14|香港|@ripaojiedian"}
   - {"skip-cert-verify":true,"type":"trojan","password":"phXKwfrd","server":"223.113.54.145","port":36442,"name":"13,14,15|CN_speednode_0002"}
   - {"name":"13|🇭🇰 香港3|@ripaojiedian","type":"ss","server":"45.250.184.183","port":6181,"cipher":"chacha20-ietf-poly1305","password":"11a805f2-41a7-4cd8-8406-0470c3cde0d3"}
